# Transformers

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  RECOMMENDATIONS.md  docker-compose.yml  pyproject.toml  requirements.txt  wikitext_sample.txt
.github/workflows/: ci.yml
checkpoints/counterfactual_repeat_20m/: best.pt
docs/: JEPA_PLAN.md  LLM_JEPA_REFERENCE.md  README.md  data_pipeline_tutorial.ipynb  imdb_sentiment_tutorial.ipynb  sampling_tutorial.ipynb  tokenizer_tutorial.ipynb  vanilla_vs_inter_block_decoder.ipynb  vanilla_vs_inter_block_decoder.md
scripts/: chat.py  generate.py  hpo_agent.py  inference_api.py  post_chat_completion.py  rank_hpo.py  train.py
src/nano_llm/: __init__.py  config.py  data.py  model.py  tokenizer.py  train.py
src/nano_llm/agent/: __init__.py  llm_client.py  prompts.py  tuner.py
src/nano_llm/inference/: __init__.py  content_filter.py  generate.py  load.py  worker.py
src/nano_llm/layers/: __init__.py  attention.py  block_attn_residual.py  decoder_block.py  positional_encoding.py
tests/: __init__.py  conftest.py  test_config_load.py  test_content_filter.py  test_data.py  test_inference.py  test_layers.py  test_model.py  test_tokenizer.py  test_train_integration.py
tests/test_agent/: test_llm_client.py  test_tuner.py
