[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-llm"
version = "0.1.0"
description = "Decoder-only transformer for training small LLMs from scratch"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "pytest",
    "pytest-cov",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pre-commit"]
wandb = ["wandb>=0.16.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]
addopts = "-v -x -m 'not integration'"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
# PyTorch uses `F`; HF tokenizers expose classes named Tokenizer, BPE, etc.
"src/nano_llm/train.py" = ["N812"]
"src/nano_llm/tokenizer.py" = ["N806"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true

[tool.coverage.report]
fail_under = 40
show_missing = true
